--- a/blockpost.html
+++ b/blockpost.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <h1>aqui haremos un block del post</h1>
-    <p>este sera nuestro parrafo de inicio</p>
+    <div id="container">
+        <div id="post">
+            <h1>aqui haremos un block del post que es atractivo</h1>
+            <p>este sera nuestro parrafo de inicio donde expresaremos las cosas icreibles que estemos haciendo</p>
+        </div>
+    </div>
 </body>
 </html>
