--- a/blockpost.html
+++ b/blockpost.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div id="container">
-        <div id="cabecera ">
-        cabecera
+        <div id="cabecera">
+        hyperblog <span id="complemento">un blog de confianza</span>
         </div>
         <div id="post">
             <h1>aqui haremos un block del post que es atractivo</h1>
