--- a/blockpost.html
+++ b/blockpost.html
@@ -12,6 +12,7 @@
         <div id="post">
             <h1>aqui haremos un block del post que es atractivo</h1>
             <p>este sera nuestro parrafo de inicio donde expresaremos las cosas icreibles que estemos haciendo</p>
+            <p>escuchar openings mientras programo me da otra vibra me da una vibra de superproductividad y me siento de lo mejor que me podria sentir cero cansancio</p>
         </div>
     </div>
 </body>
