--- a/blockpost.html
+++ b/blockpost.html
@@ -10,12 +10,12 @@
 <body>
     <div id="container">
         <div id="cabecera">
-        hyperblog <span id="complemento">un blog de confianza</span>
+        hyperblog <span id="complemento">un blog maestro </span>
         </div>
         <div id="post">
             <h1>aqui haremos un block del post que es atractivo</h1>
             <p>este sera nuestro parrafo de inicio donde expresaremos las cosas icreibles que estemos haciendo</p>
-            <p>escuchar openings mientras programo me da otra vibra me da una vibra de superproductividad y me siento de lo mejor que me podria sentir cero cansancio</p>
+            <p>escuchar openings mientras programo me da otra vibra me da una vibra de superproductividad y me siento de lo mejor que me podria sentir cero cansancio</p><p>apoco no esta bueno el blog</p>
         </div>
     </div>
 </body>
