cambios en titulo y color de cabecera

--- a/blockpost.html
+++ b/blockpost.html
@@ -13,7 +13,7 @@
         hyperblog <span id="complemento">mi blog de cabecera</span>
         </div>
         <div id="post">
-            <h1>aqui haremos un block del post que es atractivo</h1>
+            <h1>creando un conflicto porque me gusta</h1>
             <p>este sera nuestro parrafo de inicio donde expresaremos las cosas icreibles que estemos haciendo</p>
             <p>escuchar openings mientras programo me da otra vibra me da una vibra de superproductividad y me siento de lo mejor que me podria sentir cero cansancio</p><p>apoco no esta bueno el blog</p>
         </div>
