--- a/blockpost.html
+++ b/blockpost.html
@@ -10,7 +10,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
-        hyperblog <span id="complemento">mi blog de cabecera</span>
+        <span id="logo"></span> hyperblog <span id="complemento">mi blog de cabecera</span>
         </div>
         <div id="post">
             <h1>creando un conflicto porque me gusta</h1>
