--- a/blockpost.html
+++ b/blockpost.html
@@ -18,7 +18,7 @@
             <p>escuchar openings mientras programo me da otra vibra me da una vibra de superproductividad y me siento de lo mejor que me podria sentir cero cansancio</p><p>apoco no esta bueno el blog</p>
         </div>
     </div>
-    <footer>
+    <footer class="footer-container">
         mi trabajo es hacer el footer para es inceible blog post
     </footer>
 </body>
