remodificacion del footer

--- a/blockpost.html
+++ b/blockpost.html
@@ -19,7 +19,7 @@
         </div>
     </div>
     <footer class="footer-container">
-        mi trabajo es hacer el footer para es inceible blog post
+        footer increible de este post increible
     </footer>
 </body>
 </html>
