implementacion de tildes, errores corregidos

--- a/blockpost.html
+++ b/blockpost.html
@@ -14,7 +14,7 @@
         </div>
         <div id="post">
             <h1>creando un conflicto porque me gusta</h1>
-            <p>este sera nuestro parrafo de inicio donde expresaremos las cosas icreibles que estemos haciendo</p>
+            <p>este sera nuestro párrafo de inicio donde expresaremos las cosas increibles que estemos haciendo</p>
             <p>escuchar openings mientras programo me da otra vibra me da una vibra de superproductividad y me siento de lo mejor que me podria sentir cero cansancio</p><p>apoco no esta bueno el blog</p>
         </div>
     </div>
