--- a/blockpost.html
+++ b/blockpost.html
@@ -15,6 +15,9 @@
         <div id="post">
             <h1>creando un conflicto porque me gusta</h1>
             <p>este sera nuestro párrafo de inicio donde expresaremos las cosas increibles que estemos haciendo</p>
+            <figure>
+                <img src="./anketsu-anime-ita-blue-period-yatora.jpg" alt="imagen del anime blue period" class="img">
+            </figure>
             <p>escuchar openings mientras programo me da otra vibra me da una vibra de superproductividad y me siento de lo mejor que me podria sentir cero cansancio</p><p>apoco no esta bueno el blog</p>
         </div>
     </div>
