creo que ahora si

--- a/blockpost.html
+++ b/blockpost.html
@@ -4,17 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>bienvenidos al hyperblog 2.0</title>
+    <title>bienvenidos al hyperblog 2.0 this is the future of the blog post</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <div id="container">
         <div id="cabecera">
-        hyperblog <span id="complemento">mi blog de cabecera</span>
+        <span id="logo"></span> hyperblog <span id="complemento">mi blog de cabecera</span>
         </div>
         <div id="post">
             <h1>creando un conflicto porque me gusta</h1>
-            <p>este sera nuestro parrafo de inicio donde expresaremos las cosas icreibles que estemos haciendo</p>
+            <p>este sera nuestro párrafo de inicio donde expresaremos las cosas increibles que estemos haciendo</p>
+            <figure>
+                <img src="./anketsu-anime-ita-blue-period-yatora.jpg" alt="imagen del anime blue period" class="img">
+            </figure>
             <p>escuchar openings mientras programo me da otra vibra me da una vibra de superproductividad y me siento de lo mejor que me podria sentir cero cansancio</p><p>apoco no esta bueno el blog</p>
         </div>
     </div>
